# text-processing-rs

./: Cargo.toml  README.md  build-xcframework.sh
.github/workflows/: ci.yml
src/: custom_rules.rs  ffi.rs  lib.rs
src/taggers/: cardinal.rs  date.rs  decimal.rs  electronic.rs  measure.rs  mod.rs  money.rs  ordinal.rs  punctuation.rs  telephone.rs  time.rs  whitelist.rs  word.rs
swift/: NemoTextProcessing.swift
swift-test/: Package.swift
swift-test/Sources/CNemoTextProcessing/: module.modulemap
swift-test/Sources/CNemoTextProcessing/include/: nemo_text_processing.h
swift-test/Sources/NemoTest/: NLTaggerEdgeCases.swift  NemoTest.swift
tests/: en_tests.rs
tests/common/: mod.rs
